crates/library/src/snapshots/library__scan__tests__a_root_that_is_not_a_directory_lists_nothing_and_says_why@gone.snap
---
source: crates/library/src/scan.rs
expression: listing.skipped.first_error
---
Some(
    Read {
        subject: Scan,
        path: "[tmp]/gone",
        source: Kind(
            NotFound,
        ),
    },
)
