crates/library/src/snapshots/library__scan__tests__listing_keeps_decodable_files_sorted_and_skips_others.snap
---
source: crates/library/src/scan.rs
expression: report.tracks
---
[
    Track {
        source: Local(
            "[tmp]/a.flac",
        ),
        tags: Tags {
            title: None,
            artist: None,
            album: None,
            album_artist: None,
            date: None,
            genre: None,
            track: None,
            track_total: None,
            disc: None,
            composer: None,
            comment: None,
            lyrics: None,
        },
        audio_format: AudioFormat {
            format: None,
            bitrate: None,
            sample_rate: None,
            bits_per_sample: None,
            channels: None,
            replay_gain: None,
        },
        display: "a",
        tagging: Listed(
            None,
        ),
    },
    Track {
        source: Local(
            "[tmp]/b.mp3",
        ),
        tags: Tags {
            title: None,
            artist: None,
            album: None,
            album_artist: None,
            date: None,
            genre: None,
            track: None,
            track_total: None,
            disc: None,
            composer: None,
            comment: None,
            lyrics: None,
        },
        audio_format: AudioFormat {
            format: None,
            bitrate: None,
            sample_rate: None,
            bits_per_sample: None,
            channels: None,
            replay_gain: None,
        },
        display: "b",
        tagging: Listed(
            None,
        ),
    },
    Track {
        source: Local(
            "[tmp]/c.mkv",
        ),
        tags: Tags {
            title: None,
            artist: None,
            album: None,
            album_artist: None,
            date: None,
            genre: None,
            track: None,
            track_total: None,
            disc: None,
            composer: None,
            comment: None,
            lyrics: None,
        },
        audio_format: AudioFormat {
            format: None,
            bitrate: None,
            sample_rate: None,
            bits_per_sample: None,
            channels: None,
            replay_gain: None,
        },
        display: "c",
        tagging: Listed(
            None,
        ),
    },
]
