crates/library/src/snapshots/library__scan__tests__listing_names_the_audio_files_before_a_single_tag_is_read.snap
---
source: crates/library/src/scan.rs
expression: listing.paths
---
[
    "[tmp]/a.flac",
    "[tmp]/b.mp3",
]
