crates/library/src/snapshots/library__scan__tests__scan_counts_unreadable_entries_but_still_scans_readable_ones.snap
---
source: crates/library/src/scan.rs
expression: report.skipped.first_error
---
Some(
    Read {
        subject: Scan,
        path: "[tmp]/locked",
        source: Os {
            code: 13,
            kind: PermissionDenied,
            message: "Permission denied",
        },
    },
)
