crates/library/src/snapshots/library__scan__tests__scan_lists_readable_entries_and_keeps_the_first_walk_error.snap
---
source: crates/library/src/scan.rs
expression: listing.first_error
---
Some(
    Io {
        subject: Scan,
        path: "[tmp]/locked",
        source: Os {
            code: 13,
            kind: PermissionDenied,
            message: "Permission denied",
        },
    },
)
